--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="clearfix">
       <div class="logo">
-        <img src="/images/logo.png" alt="logo" />
+        <img src="./images/logo.png" alt="logo" />
       </div>
       <ul class="clearfix nav">
         <li>首页</li>
